# pocketsnack

./: .gitignore  README.md  daily.plist  hourly.plist  install.sh  main.py  pocket_snack.py  pocket_toolkit.py  pyproject.toml  settings-example.py  setup.py  v1_README.md  v2_README.md
lib/: toolkit.py
pocketsnack/: pocketsnack.py  toolkit.py
pocketsnack.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
settings/: settings-example.py  settings-example.yaml
